[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/spawner/block/BlockSpawner.gd" type="Script" id=2]

[node name="BlockSpawner" type="Node2D"]
script = ExtResource( 2 )

[node name="positions" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="positions"]

[node name="pos2" type="Position2D" parent="positions"]

[node name="pos3" type="Position2D" parent="positions"]

[node name="pos4" type="Position2D" parent="positions"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DifficulyTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="BlockSpeedTimer" type="Timer" parent="."]
wait_time = 120.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficulyTimer" to="." method="_on_DifficulyTimer_timeout"]
[connection signal="timeout" from="BlockSpeedTimer" to="." method="_on_BlockSpeedTimer_timeout"]
